switched to model-based data structures from item-based

--- a/Gui/res.qrc
+++ b/Gui/res.qrc
@@ -1,7 +1,5 @@
 <RCC>
-    <qresource prefix="/img">
-        <file>res/images/icon.ico</file>
-    </qresource>
+    <qresource prefix="/img"/>
     <qresource prefix="/files">
         <file>res/files/nameservers.txt</file>
     </qresource>
