--- a/Gui/src/BruteTab/BruteConfigDialog.ui
+++ b/Gui/src/BruteTab/BruteConfigDialog.ui
@@ -235,6 +235,13 @@
             </attribute>
            </widget>
           </item>
+          <item>
+           <widget class="QRadioButton" name="radioButton_dnsRecordType_ANY">
+            <property name="text">
+             <string>ANY</string>
+            </property>
+           </widget>
+          </item>
          </layout>
         </item>
        </layout>
@@ -368,7 +375,10 @@ border-style: solid;
 border-color: black;
 border-width: 1px;
 border-radius: 0px;
-}</string>
+}
+QListWidget::item:selected {
+background-color:  rgb(199, 199, 149);
+color: black;}</string>
             </property>
             <property name="selectionMode">
              <enum>QAbstractItemView::ExtendedSelection</enum>
