--- a/Gui/src/BruteTab/WordlistDialog.ui
+++ b/Gui/src/BruteTab/WordlistDialog.ui
@@ -311,7 +311,10 @@ border-style: solid;
 border-color: black;
 border-width: 1px;
 border-radius: 0px;
-}</string>
+}
+QListWidget::item:selected {
+background-color:  rgb(199, 199, 149);
+color: black;}</string>
           </property>
           <property name="selectionMode">
            <enum>QAbstractItemView::ExtendedSelection</enum>
