--- a/Gui/src/SaveTab/Save.ui
+++ b/Gui/src/SaveTab/Save.ui
@@ -283,7 +283,10 @@ border-style: solid;
 border-color: black;
 border-width: 1px;
 border-radius: 0px;
-}</string>
+}
+QListWidget::item:selected {
+background-color:  rgb(199, 199, 149);
+color: black;}</string>
                </property>
                <property name="selectionMode">
                 <enum>QAbstractItemView::MultiSelection</enum>
