--- a/Gui/src/BruteTab/Brute.ui
+++ b/Gui/src/BruteTab/Brute.ui
@@ -584,7 +584,10 @@ border-width: 1px;
 border-radius: 0px;}
 QListWidget::item:selected {
 background-color:  rgb(199, 199, 149);
-color: black;}</string>
+color: black;}
+QListWidget::item:hover{
+background-color: rgb(230, 230, 172);
+}</string>
                      </property>
                     </widget>
                    </item>
@@ -1399,7 +1402,10 @@ border-radius: 0px;
 }
 QListWidget::item:selected {
 background-color:  rgb(199, 199, 149);
-color: black;}</string>
+color: black;}
+QListWidget::item:hover{
+background-color: rgb(230, 230, 172);
+}</string>
                      </property>
                     </widget>
                    </item>
@@ -1560,7 +1566,10 @@ border-radius: 0px;
 }
 QListWidget::item:selected {
 background-color:  rgb(199, 199, 149);
-color: black;}</string>
+color: black;}
+QListWidget::item:hover{
+background-color: rgb(230, 230, 172);
+}</string>
                    </property>
                    <property name="selectionMode">
                     <enum>QAbstractItemView::ExtendedSelection</enum>
@@ -2145,7 +2154,10 @@ border-radius: 0px;
 }
 QListWidget::item:selected {
 background-color:  rgb(199, 199, 149);
-color: black;}</string>
+color: black;}
+QListWidget::item:hover{
+background-color: rgb(230, 230, 172);
+}</string>
                      </property>
                     </widget>
                    </item>
@@ -2353,7 +2365,10 @@ border-radius: 0px;
 }
 QListWidget::item:selected {
 background-color:  rgb(199, 199, 149);
-color: black;}</string>
+color: black;}
+QListWidget::item:hover{
+background-color: rgb(230, 230, 172);
+}</string>
                    </property>
                    <property name="selectionMode">
                     <enum>QAbstractItemView::ExtendedSelection</enum>
