--- a/Gui/src/DnsTab/Dns.ui
+++ b/Gui/src/DnsTab/Dns.ui
@@ -469,7 +469,10 @@ border-radius: 0px;
 }
 QListWidget::item:selected {
 background-color:  rgb(199, 199, 149);
-color: black;}</string>
+color: black;}
+QListWidget::item:hover{
+background-color: rgb(230, 230, 172);
+}</string>
                      </property>
                     </widget>
                    </item>
@@ -624,7 +627,10 @@ border-radius: 0px;
 }
 QListWidget::item:selected {
 background-color:  rgb(199, 199, 149);
-color: black;}</string>
+color: black;}
+QListWidget::item:hover{
+background-color: rgb(230, 230, 172);
+}</string>
                    </property>
                    <property name="editTriggers">
                     <set>QAbstractItemView::DoubleClicked</set>
