--- a/Gui/src/OsintTab/Osint.ui
+++ b/Gui/src/OsintTab/Osint.ui
@@ -526,6 +526,12 @@ border-style: solid;
 border-color: black;
 border-width: 1px;
 border-radius: 0px
+}
+QListWidget::item:selected{
+background-color:  rgb(199, 199, 149);
+color: black;}
+QListWidget::item:hover{
+background-color: rgb(230, 230, 172);
 }</string>
                  </property>
                 </widget>
