--- a/Gui/src/MainWindow.ui
+++ b/Gui/src/MainWindow.ui
@@ -23,7 +23,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>sub3num</string>
+   <string>subsuite</string>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: rgb(235, 235, 235);</string>
