--- a/Gui/src/MainWindow.ui
+++ b/Gui/src/MainWindow.ui
@@ -23,7 +23,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>subsuite</string>
+   <string>Sub Suite</string>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: rgb(235, 235, 235);</string>
@@ -35,9 +35,12 @@
    </size>
   </property>
   <widget class="QWidget" name="centralwidget">
+   <property name="styleSheet">
+    <string notr="true"/>
+   </property>
    <layout class="QVBoxLayout" name="verticalLayout_2">
     <property name="spacing">
-     <number>3</number>
+     <number>4</number>
     </property>
     <property name="leftMargin">
      <number>0</number>
@@ -67,17 +70,16 @@
          </font>
         </property>
         <property name="styleSheet">
-         <string notr="true">/*QTabBar::tab:hover {
-background-color: rgb(212, 212, 159);
+         <string notr="true">/* The tab widget frame
+QTabWidget::pane {
+border-top: 2px solid rgb(210, 210, 210);
 }*/
 QTabWidget::tab-bar {
-    left: 10px; /* move to the right by 5px */
+left: 10px;
 }
-
 QTabBar::tab:hover{
 background-color: rgb(220, 220, 220);
 }
-
 QTabBar::tab:selected {
 color: rgb(141, 141, 106);
 }</string>
